# aido-co-scientist

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.gpu  GUIDE.md  PROJECT_STRUCTURE.md  README.md  config.yaml.example  pyproject.toml  research_paper.md  test_all_datasets.py
co_scientist/: __init__.py  batch.py  checkpoint.py  cli.py  complexity.py  config.py  dashboard.py  defaults.py  defaults.yaml  experiment_log.py  guardrails.py  iteration.py  live_dashboard.py  memory.py  resilience.py  validation.py
docs/: challenges_and_learnings.md  implementation_phases.md  step0_project_skeleton.md  step10_experiment_log_checkpoint.md  step11_guardrails.md  step11b_adaptive_complexity.md  step11c_error_recovery.md  step12_rich_dashboard.md  step13_tree_diversity.md  step14_bio_cnn.md  step16_stacking_ensemble.md  step17_agent_framework.md  step18_llm_client.md  step19_agent_driven_pipeline.md  step1_data_loading_profiling.md  step20_search_layer.md  step21_biology_specialist.md  step22_active_learning.md  step23_iteration_loop.md  step24_react_agent.md  step25_tree_search.md  step26_tournament_ranking.md  step27_agent_debate.md  step28_report_review.md  step29_batch_processing.md  step2_preprocessing_splitting.md  step30_cross_run_memory.md  step31_extended_models_and_custom_design.md  step32_validation_agent.md  step3_baselines_evaluation.md  step4_model_export.md  step5_visualization.md  step6_report_generation.md  step7_predefined_defaults.md  step8_hp_search.md  step9_mlp_model.md
tests/: conftest.py  test_config.py  test_custom_model.py  (+3 more)
(+64 files in other folders)
